<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SIM Editor</string>
    <string name="caption">Current SIM number:</string>
    <string name="num_placeholder">NULL</string>
    <string name="waiting_for_reboot">Reboot to apply changes!</string>
    <string name="inputtext_exp">New number:</string>
    <string name="action_help_text">Help</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="success_notification_title">SIM number changed</string>
    <string name="success_notification_text">SIM number has been correctly changed.</string>
    <string name="title_activity_error">ErrorActivity</string>
	<string name="error_btn">Copy and exit</string>
	
	<string name="error_notification_title">Error</string>
	<string name="error_notification_text">Tap for more details.</string>
	<string name="error_act_title">Error\'s log:</string>
	<string name="cv_solve_btn">Solve!</string>
	
	<string name="cv_root_pr">Rooted: %1$s</string>
	<string name="cv_installer_pr">Xposed Installer: %1$s</string>
	<string name="cv_framework_pr">Xposed Framework: %1$s</string>
	<string name="cv_whitelist_pr">Module Whitelisted: %1$s</string>
	
	<string name="yes">OK</string>
	<string name="no">NO</string>
	
	<string name="about_xposed">About Xposed</string>
	<string name="report_bug">Report a bug</string>
	<string name="gnufabio">\@Gnufabio</string>
	
	<string name="eula_title">End User License Agreement</string>
	<string name="eula_content">THIS SOFTWARE IS PROVIDED BY THE DEVELOPER AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE DEVELOPER BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. </string>
	<string name="agree">AGREE</string>
	<string name="disagree">DISAGREE</string>
</resources>
