<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity" >
	
   <com.gnufabio.simeditor.widgets.ControllerView 
       android:id="@+id/controller_view"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true" />

   <Button
       android:layout_below="@id/controller_view"
       android:id="@+id/about_xposed"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_margin="2dp"
       android:gravity="center_horizontal|center_vertical"
       android:text="@string/about_xposed" />
   
   <Button
       android:layout_below="@id/about_xposed"
       android:id="@+id/report_bug"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_margin="2dp"
       android:gravity="center_horizontal|center_vertical"
       android:text="@string/report_bug" />
   
   <Button
       android:id="@+id/gnufabio_twitter_page"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:layout_below="@id/report_bug"
       android:layout_margin="2dp"
       android:gravity="center_horizontal|center_vertical"
       android:text="@string/gnufabio" />
   
</RelativeLayout>
