<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SimEditorActivity" >

    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:text="@string/caption" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/caption"
        android:layout_below="@id/caption" 
        android:id="@+id/num_container">
        
        <ImageButton
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/content_edit"
            style="?android:attr/borderlessButtonStyle" />

        <TextView
            android:id="@+id/number_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/num_placeholder"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_toLeftOf="@id/button_edit" />

    </RelativeLayout>
    
    <TextView android:id="@+id/waiting_reboot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/num_container"
        android:layout_marginTop="5dp"
        android:layout_below="@id/num_container"
        android:text="@string/waiting_for_reboot"
        android:textColor="@color/reboot_alert_red"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:visibility="gone" />
</RelativeLayout>